--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Used Cars!</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">   
+  <title>CarLot Cars!</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-4">
-      Hello World
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Used CarLot Website!</a>
+          <form class="navbar-form navbar-left">
+      <div class="form-group">
+        <input type="text" class="form-control">
+      </div> 
+        </form>
       </div>
-      <div class="col-xs-4">
-      Hello World
-      </div>
-      <div class="col-xs-4">
-      Hello World
-      </div>
+  </nav>
   </div>
-</div>
+  <div class="container">
+  <div class="row" id="outputEl">
+  
+  </div>
 
 
 
-<!-- load appropriate JS file here -->
 
-   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
-</body>
-</html>
+  </div>
+  <script type="text/javascript" src="/javascripts/CarLot.js"></script>
+  <script type="text/javascript" src="/javascripts/events.js"></script>
+  <script type="text/javascript" src="/javascripts/borderChange.js"></script>
+  <script type="text/javascript" src="/javascripts/main.js"></script>
+
+
+  </body>
+  </html>
